--- a/escape-from-duckov/index.html
+++ b/escape-from-duckov/index.html
@@ -59,6 +59,27 @@
       }
     }
     </script>
+
+    <!--  -->
+    <!-- 延迟加载第三方脚本 -->
+  <script>
+    window.addEventListener('load', function () {
+      setTimeout(function () {
+        // 延迟加载Google Analytics
+        const gtagScript = document.createElement('script');
+        gtagScript.async = true;
+        gtagScript.defer = true;
+        gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-FK6RY91JR7';
+        document.head.appendChild(gtagScript);
+
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-FK6RY91JR7');
+
+      }, 3000);
+    });
+  </script>
   </head>
   <body>
     <div id="app"></div>
